make tests run under Java 17