@@ -97,7 +97,7 @@ dependencies {
 
 test {
     useJUnitPlatform()
-    jvmArgs = ["--illegal-access=permit"]
+    jvmArgs = ["--add-exports=java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED"]
 }
 
 jar {
